# tongue-twisters

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: main.py
backend/app/: api.py  config.py  models.py  schemas.py  service.py
backend/app/migrations/tongue_twisters/: 0_20240219105554_init.py
backend/tests/: test_main.http
frontend/: package-lock.json  package.json
frontend/src/: App.js  twisters.js
frontend/src/dev/: previews.jsx
